deploy/prod/deploy-indexer-autocrawler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pregod-indexer-autocrawler
  namespace: pregod
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pregod-indexer
      tier: autocrawler
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pregod-indexer
        tier: autocrawler
    spec:
      containers:
        - image: IMAGE
          imagePullPolicy: Always
          name: app
          command:
            - ./indexer
            - autocrawler
          resources:
            requests:
              memory: "400Mi"
              cpu: "200m"
            limits:
              memory: "800Mi"
              cpu: "1000m"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: config
              mountPath: "/rss3-pregod/config"
              readOnly: true
            - name: mongo-ca
              mountPath: "/rds-combined-ca-bundle.pem"
              subPath: rds-combined-ca-bundle.pem
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: config
          secret:
            secretName: pregod
        - name: mongo-ca
          configMap:
            name: rds-combined-ca-bundle.pem
            items:
              - key: rds-combined-ca-bundle.pem
                path: rds-combined-ca-bundle.pem
