deploy/prod/deploy-indexer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pregod-indexer
  namespace: pregod
spec:
  progressDeadlineSeconds: 600
  replicas: 6
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pregod-indexer
      tier: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pregod-indexer
        tier: api
    spec:
      containers:
        - image: IMAGE
          imagePullPolicy: Always
          name: app
          command:
            - ./indexer
            - httpsvc
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: "200Mi"
              cpu: "200m"
            limits:
              memory: "400Mi"
              cpu: "1000m"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: config
              mountPath: "/rss3-pregod/config"
              readOnly: true
            - name: mongo-ca
              mountPath: "/rds-combined-ca-bundle.pem"
              subPath: rds-combined-ca-bundle.pem
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: config
          secret:
            secretName: pregod
        - name: mongo-ca
          configMap:
            name: rds-combined-ca-bundle.pem
            items:
              - key: rds-combined-ca-bundle.pem
                path: rds-combined-ca-bundle.pem
